--- a/src/catalog_section.html
+++ b/src/catalog_section.html
@@ -21,7 +21,7 @@
                      <li><a href="#">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><a href="#">Каталог</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><a href="#">Промышленные прямоугольные разъёмы</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
-                     <li><span>href="#">Комплекты промышленных разъёмов</span></li>
+                     <li><span>Комплекты промышленных разъёмов</span></li>
                   </ul>
                </div>
                <div class="products__content">
