--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
                      <div class="benefits__item">
                         <div class="benefits__title-container">
                            <img src="./img/icons/conversation-blue.svg" alt="Консультации">
+                        
                            <h3 class="benefits__title">Консультации</h3>
                         </div>
                         <p class="benefits__text">
@@ -102,7 +103,7 @@
                      </div>
                      <div class="benefits__item">
                         <div class="benefits__title-container">
-                           <img src="./img/icons/greeting-blue.svg" alt="Доставка">
+                           <img src="@img/icons/greeting-blue.svg" alt="Доставка">
                            <h3 class="benefits__title">Доставка по РФ</h3>
                         </div>
                         <p class="benefits__text">
@@ -227,18 +228,19 @@
                <h2 class="about__title">О компании</h2>
                <div class="about__wrapper">
                   <div class="about__img-container">
-                     <img src="./img/content/process.jpg" 
-                     srcset="./img/content/process.jpg 575w, ./img/content/process-767.jpg 768w, ./img/content/process.jpg 1200w"
-                      alt="компанния">
+                     <img src="./img/content/process.jpg"
+                        srcset="./img/content/process.jpg 575w, ./img/content/process-767.jpg 768w, ./img/content/process.jpg 1200w"
+                        alt="компанния">
                   </div>
                   <div class="about__content">
                      <h4 class="about__offer-title">Мы предлагаем инновационные решения и профессиональный подход</h4>
                      <div class="about__text">
-                        <p>Сотрудничаем с высокотехнологичными предприятиями и являемся их официальными представителями
-                           в России.
-                        </p>
-                        <p> Наша миссия — предоставить нашим клиентам инновационные и надёжные решения, соответствующие
-                           самым высоким мировым стандартам.
+                        <p> Сотрудничаем c высокотехнологичными предприятиями и являемся их официальными представителями
+                           в России. 
+                           <p>
+                              Наша миссия — предоставить нашим клиентам инновационные и надёжные решения,
+                              соответствующие самым высоким мировым стандартам.   
+                           </p>
                         </p>
                      </div>
                      <a href="#">Узнать больше</a>
@@ -508,7 +510,7 @@
                      <div class="swiper-wrapper brand">
                         <div class="swiper-slide brand">
                            <a href="#" class="brands__slider-item">
-                              <img src="./img/icons/partner-logo.png" alt="брэнд">
+                              <img src='@img/icons/partner-logo.png' alt="брэнд">
                            </a>
                         </div>
                         <div class="swiper-slide brand">
