--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -6,12 +6,14 @@
          </p>
          <form action="#" class="footer__subscribe-form">
             <input type="email" class="footer__subscribe-input" placeholder="Введите email">
-            <button type="submit" class="footer__subscribe-btn">Подписаться</button>
+            <button type="submit" class="footer__subscribe-btn"><span>Подписаться</span>
+            <img src="@img/icons/bell.svg" alt="подписаться">
+            </button>
          </form>
       </div>
       <div class="footer__content">
          <div class="footer__about">
-            <img src="../img/icons/logo.svg" alt="лого">
+            <img src="@img/icons/logo.svg" alt="лого">
             <p class="footer__address">г. Всеволожск, ул. Аэропортовская, 14</p>
          </div>
          <nav class="footer__nav">
@@ -19,23 +21,26 @@
                <h5 class="footer__title">Мы на связи</h5>
                <div class="footer__connect-wrapper">
                   <a href="tel:+78122008275">
-                     <img src="../img/icons/phone-stroke.svg" alt="телефон">
+                     <img src="@img/icons/phone-stroke.svg" alt="телефон">
                      <span>+7 812 200 82 75</span>
                   </a>
                   <a href="mailto:info@kevtek.ru">
-                     <img src="../img/icons/envelope-stroke.svg" alt="почта">
+                     <img src="@img/icons/envelope-stroke.svg" alt="почта">
                      <span>info@kevtek.ru</span>
                   </a>
-                  <p>г. Всеволожскул. Аэропортовская, 14</p>
+                  <a href="geo:59.99512081700448,30.641846915269824">
+                     <img src="@img/icons/location.svg" alt="адрес">
+                     <p>г. Всеволожск ул. Аэропортовская, 14</p>
+                  </a>
                </div>
                <button class="footer__write-btn">Написать нам</button>
             </div>
             <div class="footer__messenger">
                <h5 class="footer__title">Мессенджеры</h5>
                <div class="footer__messenger-wrapper">
-                  <a href="https://whatsapp.com/"><img src="../img/icons/whatsapp.svg" alt="whatsapp"></a>
-                  <a href="https://www.viber.com/"><img src="../img/icons/viber.svg" alt="viber"></a>
-                  <a href="https://telegram.org/"><img src="../img/icons/telegram.svg" alt="telegram"></a>
+                  <a href="https://whatsapp.com/"><img src="@img/icons/whatsapp.svg" alt="whatsapp"></a>
+                  <a href="https://www.viber.com/"><img src="@img/icons/viber.svg" alt="viber"></a>
+                  <a href="https://telegram.org/"><img src="@img/icons/telegram.svg" alt="telegram"></a>
                </div>
             </div>
             <div class="footer__info">
