--- a/src/product-desc.html
+++ b/src/product-desc.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./styles/index.css">
    <script defer src="js/index.js"></script>
-   <title>Document</title>
+   <title>Описание товара</title>
 </head>
 
 <body class="body">
