create many pages

--- a/src/404.html
+++ b/src/404.html
@@ -22,7 +22,7 @@
                <div class="error__content">
                   <h3>Похоже, такой страницы не существует</h3>
                   <div class="error__btn-container">
-                     <button>Перейти на главную</button>
+                     <a>На главную</a>
                      <button>Написать нам</button>
                   </div>
                </div>
