--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -405,7 +405,7 @@
             <nav class="header__actions">
                <ul class="header__actions-list">
                   <li class="header__actions-item">
-                     <a href="#" style="display: flex">
+                     <a data-modal-link="account" href="#" style="display: flex">
                         <img src="@img/icons/login.svg" alt="Логин">
                         <span>Войти</span>
                      </a>
