--- a/src/html/_headerMobile.htm
+++ b/src/html/_headerMobile.htm
@@ -121,7 +121,7 @@
          </li>
 
          <li class="mobile__actions-item">
-            <a href="#" style="display: flex">
+            <a data-modal-link="account" href="#" style="display: flex">
                <img src="@img/icons/login.svg" alt="Логин">
                <span>Кабинет</span>
             </a>
