--- a/src/news-page.html
+++ b/src/news-page.html
@@ -36,15 +36,18 @@
                      компаний для ознакомления с новинкамии актуальными трендами рынка электротехники, проведения
                      деловых переговоров и заключения выгодных контрактов.</p>
                   <div class="news-page__img-container">
-                     <img src="@img/content/exhibition.jpg" alt="выставка">
-                     <img src="@img/content/stand.jpg" alt="стенд">
+                     <div>
+                        <img src="@img/content/exhibition.jpg" alt="выставка">
+                     </div>
+                     <div>
+                        <img src="@img/content/stand.jpg" alt="стенд">
+                     </div>
                   </div>
-                  <h2 class="news-page__title">Haoke Electrical (ZJHK) на выставке ЭЛЕКТРО-2023</h2>
+                  <h2 class="news-page__title">Экспозиция</h2>
                   <p>Экспозиция «Электро-2023» по сравнению с прошлым годом увеличилась в два раза по площади
                      и количеству экспонентов. В этом году продукцию электротехнической индустрии продемонстрировали 336
                      компаний из 8 стран: Германии, Испании, Казахстана, Китая, Республики Беларусь, Республики Молдова,
                      России, Турции.
-                     Площадь выставки составила 5 778 кв. м нетто и 17 120 кв. м брутто.
                   </p>
                   <p> Площадь выставки составила 5 778 кв. м нетто и 17 120 кв. м брутто.
                   </p>
@@ -76,64 +79,92 @@
                      до электромонтажных, электроустановочных изделий, приборов учета и контроля, автоматизации зданий
                      и сооружений, энергоэффективности, промышленной автоматизации и диспетчеризации.
                   </p>
-                  <p>
+                  <p class="news-page__date">
                      12.07.2023 г.
                   </p>
-                  <div class="news__container container">
-                     <div class="news__title-container">
-                        <h2 class="news__title">Новости</h2>
-                        <button class="title-btn btn">Показать все</button>
+               </div>
+               <div class="news-page__container ">
+                  <div class="news-page__title-container">
+                     <h2 class="news__title">Новости</h2>
+                     <button class="title-btn btn">Показать все</button>
+                  </div>
+                  <div class="news__body">
+                     <div class="swiper news-slider">
+                        <div class="swiper-wrapper">
+                           <div class="swiper-slide news__item">
+                              <div>
+                                 <div>
+                                    <img src="./img/content/electro-2022.jpg" alt="новости">
+                                 </div>
+                                 <div>
+                                    <h5>Участие ООО «КевТек» в выставке ЭЛЕКТРО-2024</h5>
+                                    <p>Выставка состоится 6-9 июня 2024 года в Экспоцентре г. Москва</p>
+                                 </div>
+                                 <div class="news-page__btn-container">
+                                    <a href="#">Подробнее</a>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="swiper-slide news__item">
+                              <div>
+                                 <div>
+                                    <img src="./img/content/electro-2023.jpg" alt="новости">
+                                 </div>
+                                 <div>
+                                    <h5>Haoke Electrical (ZJHK) на выставке ЭЛЕКТРО-2023</h5>
+                                    <p>Выставка состоится 6–9 июня 2023 года в Экспоцентре</p>
+                                 </div>
+                                 <div class="news-page__btn-container">
+                                    <a href="#">Подробнее</a>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="swiper-slide news__item">
+                              <div>
+                                 <div>
+                                    <img src="./img/content/handshake.jpg" alt="новости">
+                                 </div>
+                                 <div>
+                                    <h5>Заключили новые контрактыс поставщиками</h5>
+                                    <p>Наш каталог пополнен новыми товарами</p>
+                                 </div>
+                                 <div class="news-page__btn-container">
+                                    <a href="#">Подробнее</a>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="swiper-slide news__item">
+                              <div>
+                                 <div>
+                                    <img src="./img/content/electro-2022.jpg" alt="новости">
+                                 </div>
+                                 <div>
+                                    <h5>Участие ООО «КевТек» в выставке ЭЛЕКТРО-2024</h5>
+                                    <p>Выставка состоится 6-9 июня 2024 года в Экспоцентрег. Москва</p>
+                                 </div>
+                                 <div class="news-page__btn-container">
+                                    <a href="#">Подробнее</a>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="swiper-slide news__item">
+                              <div>
+                                 <div>
+                                    <img src="./img/content/handshake.jpg" alt="новости">
+                                 </div>
+                                 <div>
+                                    <h5>Заключили новые контрактыс поставщиками</h5>
+                                    <p>Наш каталог пополнен новыми товарами</p>
+                                 </div>
+                                 <div class="news-page__btn-container">
+                                    <a href="#">Подробнее</a>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
                      </div>
-                     <div class="news__wrapper">
-                        <div class="news__item">
-                           <div>
-                              <div>
-                                 <img src="./img/content/electro-2022.jpg" alt="новости">
-                              </div>
-                              <div>
-                                 <h5>Участие ООО «КевТек» в выставке ЭЛЕКТРО-2024</h5>
-                                 <p>Выставка состоится 6-9 июня 2024 года в Экспоцентрег. Москва</p>
-                              </div>
-                              <a href="#">Подробнее</a>
-                           </div>
-                        </div>
-                        <div class="news__item">
-                           <div>
-                              <div>
-                                 <img src="./img/content/electro-2023.jpg" alt="новости">
-                              </div>
-                              <div>
-                                 <h5>Haoke Electrical (ZJHK) на выставке ЭЛЕКТРО-2023</h5>
-                                 <p>Выставка состоится 6–9 июня 2023 года в Экспоцентре</p>
-                              </div>
-                              <a href="#">Подробнее</a>
-                           </div>
-                        </div>
-                        <div class="news__item">
-                           <div>
-                              <div>
-                                 <img src="./img/content/handshake.jpg" alt="новости">
-                              </div>
-                              <div>
-                                 <h5>Заключили новые контрактыс поставщиками</h5>
-                                 <p>Наш каталог пополнен новыми товарами</p>
-                              </div>
-                              <a href="#">Подробнее</a>
-                           </div>
-                        </div>
-                        <div class="news__item">
-                           <div>
-                              <div>
-                                 <img src="./img/content/electro-2022.jpg" alt="новости">
-                              </div>
-                              <div>
-                                 <h5>Участие ООО «КевТек» в выставке ЭЛЕКТРО-2024</h5>
-                                 <p>Выставка состоится 6-9 июня 2024 года в Экспоцентрег. Москва</p>
-                              </div>
-                              <a href="#">Подробнее</a>
-                           </div>
-                        </div>
-                     </div>
+                     <div class="swiper-button-prev news"></div>
+                     <div class="swiper-button-next news"></div>
                   </div>
                </div>
             </div>
