--- a/src/news.html
+++ b/src/news.html
@@ -14,7 +14,7 @@
       @@include('html/_header.htm')
       @@include('html/_headerMobile.htm')
       <main>
-         <section class="news">
+         <section class="news section">
             <div class="news__container container">
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
@@ -23,7 +23,7 @@
                   </ul>
                </div>
                <div class="news__content">
-                  <div class="news__title">
+                  <div class="news__title-body">
                      <h2>Новости</h2>
                      <p>Информация о поставщиках и корпоративных событиях</p>
                   </div>
