--- a/src/producer.html
+++ b/src/producer.html
@@ -76,7 +76,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -109,7 +109,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -142,7 +142,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -175,7 +175,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -208,7 +208,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -241,7 +241,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -274,7 +274,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -307,7 +307,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -340,7 +340,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -373,7 +373,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -406,7 +406,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
@@ -439,7 +439,7 @@
                               <h5>HA-004-F</h5>
                               <p>09200042711</p>
                               <div>
-                                 <img src="./img//icons/star.svg" alt="рейтинг"><span>4.9</span>
+                                 <img src="./img/icons/star.svg" alt="рейтинг"><span>4.9</span>
                                  <a href="#"><span>152 </span>отзыва</a>
                               </div>
                            </div>
