create contacts page

--- a/src/articles.html
+++ b/src/articles.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./styles/index.css">
    <script defer src="js/index.js"></script>
-   <title>Документация</title>
+   <title>Статьи</title>
 </head>
 
 <body class="body">
@@ -14,7 +14,7 @@
       @@include('html/_header.htm')
       @@include('html/_headerMobile.htm')
       <main>
-         <section class="articles">
+         <section class="articles section">
             <div class="articles__container container">
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
